# etdc

./: Cargo.toml  README.md
client/: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml
server/src/: events.rs  main.rs  state.rs
server/src/adapters/: ws.rs
server/src/components/: common.rs  player.rs
server/src/systems/: cli_input.rs  mod.rs  players.rs
src/: config.rs  main.rs
src/components/: boss_card.rs  castle.rs  chapter_card.rs  character_card.rs  character_dice.rs  common.rs  item_card.rs  mod.rs  start_card.rs
