[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.9.0" # bevy = { version = "0.8.0", features = ["dynamic"] }
rand = "0.8.5"
tungstenite = "0.17.3"
iyes_loopless = "0.9.1"
serde = { version = "1.0.148", features = ["derive"]}
tokio = { version = "1.22.0", features = ["full"]}