[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.9.0" # bevy = { version = "0.8.0", features = ["dynamic"] }
futures = "0.3.25"
futures-util = "0.3.25"
rand = "0.8.5"
iyes_loopless = "0.9.1"
serde = { version = "1.0.148", features = ["derive"]}
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"]}
tokio-tungstenite = "0.18.0"